--- a/Demo/index.html
+++ b/Demo/index.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day05 JS - Demo</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
+    <!-- <p class = "boys">Eslam Ashraf </p>
+    <p class = "boys">Ahmed Khaled </p>
+    <p class = "boys">Ehab Ali </p>
+    <h2 class = "boys">Hello From h2</h2>
+    <p id="specialP">Mohamed Khalifa</p>
+    
+    <button id="changeColorBTN">Change Color</button> -->
+
+    <!-- Event -> onClick = "" -->
+    <!-- <button onclick="console.log('Clicked');">click me</button> -->
+
+    <!-- I need when click on this button, execute specific function which i made in JS file -->
+    <!-- <button onclick="getNumber()">click me</button> -->
+
+    <!--
+    But we stop use this approach to make events, we write every thing in JS file
+    -->
+
+    <!-- <button id="dataBTN">get data</button>
+
+    <form action="">
+        <button id="submit">submit</button>
+    </form> -->
+
+    
+    <input type="text" placeholder="Key Press To Change Font-Family" id="input01">
+    <input type="text" placeholder="Key UP To Change font-style" id="input02">
+    <p id="loremP">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati ipsum maiores rem et facilis?
+        Earum corporis id dolore reiciendis, animi cum nisi. Possimus accusantium nostrum ipsum consequuntur corporis
+        illo molestias.
+        Mollitia in aliquid omnis esse amet nobis cupiditate perspiciatis hic, culpa quibusdam dolore asperiores
+        explicabo assumenda vitae deleniti illum, delectus error minima magnam distinctio quam aliquam tempore!
+        Repellendus, similique veniam!
+        Provident facilis iusto voluptatibus accusantium aliquam? Distinctio illum, tempora assumenda culpa repudiandae
+        nam officiis aliquam ratione esse alias cum, corporis harum dolorum porro ut. Amet exercitationem quia odit.
+        Tenetur, consequatur?</p>
+    <button id="gray_BTN">gray</button>
+    <button id="red_BTN">red</button>
+    <button id="blue_BTN">blue</button>
+    <button id="black_BTN">black</button>
+
     <script src="./assets/js/main.js"></script>
 </body>
+
 </html>
